--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
             <div class="container plan-top mt-2">
                 <h2 class="plan-title">Trova il piano Dropbox Business che fa per te</h2>
                 <div class="radio1 mt-2">
-                    <input type="radio">
+                    <input type="radio" name="plan" id="plan1">
                     <label for="">Fatturazione mensile</label>
                 </div>
                 <div class="radio2 mt-2">
-                    <input type="radio">
+                    <input type="radio" name="plan" id="plan2">
                     <label for="">Fatturazione annuale</label>
                 </div>
             </div>
@@ -303,7 +303,7 @@
                         <div id="border-grey" class="mt-2"></div>
                     </div>
                     <div class="designit-text">
-                        <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper.</p>
+                        <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper.</p>
                         <div class="mt-2">Morten Thomsen, Global IT Lead</div>
                     </div>
                 </div>
@@ -334,7 +334,7 @@
         <section class="try-now">
             <div class="container">
                 <h1>Porta Dropbox Business<br> nella tua azienda.</h1>
-                <div class="try-now-button"><a href="">Inizia la tua prova gratuita</a></div>
+                <div><a href="" class="try-now-button">Inizia la tua prova gratuita</a></div>
             </div>
         </section>
         <!-- Sezione try-now-for-30-days -->
@@ -346,18 +346,42 @@
                 <div class="row-support border-top clearfix">
                     <div class="col support-text">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</div>
                     <i class="fas fa-angle-down support-arrow"></i>
+                    <div class="answer-hidden mt-2">
+                        <div class="col support-text">
+                            Il piano Standard fornisce al team 5 TB (SO00 GB) di spazio di archiviazione e semplici strumenti di condivisione e collaborazione. Per i team che hanno bisogno di più spazio di archiviazione e sicurezza, il piano Advanced offre tutto to spazio necessario al team, oltre a sofisticate funzioni di amministrazione, controllo, integrazione e sicurezza. Per ulteriori informazioni sui nostri piani, consulta guesta pagina.
+                        </div>
+                        <i class="fas fa-angle-up support-arrow"></i>
+                    </div>
                 </div>
                 <div class="row-support clearfix">
                     <div class="col support-text">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</div>
                     <i class="fas fa-angle-down support-arrow"></i>
+                    <div class="answer-hidden mt-2">
+                        <div class="col support-text">
+                            Il piano Standard fornisce al team 5 TB (SO00 GB) di spazio di archiviazione e semplici strumenti di condivisione e collaborazione. Per i team che hanno bisogno di più spazio di archiviazione e sicurezza, il piano Advanced offre tutto to spazio necessario al team, oltre a sofisticate funzioni di amministrazione, controllo, integrazione e sicurezza. Per ulteriori informazioni sui nostri piani, consulta guesta pagina.
+                        </div>
+                        <i class="fas fa-angle-up support-arrow"></i>
+                    </div>
                 </div>
                 <div class="row-support clearfix">
                     <div class="col support-text">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</div>
                     <i class="fas fa-angle-down support-arrow"></i>
+                    <div class="answer-hidden mt-2">
+                        <div class="col support-text">
+                            Il piano Standard fornisce al team 5 TB (SO00 GB) di spazio di archiviazione e semplici strumenti di condivisione e collaborazione. Per i team che hanno bisogno di più spazio di archiviazione e sicurezza, il piano Advanced offre tutto to spazio necessario al team, oltre a sofisticate funzioni di amministrazione, controllo, integrazione e sicurezza. Per ulteriori informazioni sui nostri piani, consulta guesta pagina.
+                        </div>
+                        <i class="fas fa-angle-up support-arrow"></i>
+                    </div>
                 </div>
                 <div class="row-support clearfix">
                     <div class="col support-text">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</div>
                     <i class="fas fa-angle-down support-arrow"></i>
+                    <div class="answer-hidden mt-2">
+                        <div class="col support-text">
+                            Il piano Standard fornisce al team 5 TB (SO00 GB) di spazio di archiviazione e semplici strumenti di condivisione e collaborazione. Per i team che hanno bisogno di più spazio di archiviazione e sicurezza, il piano Advanced offre tutto to spazio necessario al team, oltre a sofisticate funzioni di amministrazione, controllo, integrazione e sicurezza. Per ulteriori informazioni sui nostri piani, consulta guesta pagina.
+                        </div>
+                        <i class="fas fa-angle-up support-arrow"></i>
+                    </div>
                 </div>
             </div>
         </section>
